--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 /* Something for smooth scrolling */
 /* Hover for buttons and links */
+body {
+    font: 1em sans-serif;
+}
+
+.container {
+    display: flex;
+}
+
+/* media query */
+/* Pics to fit media query sizes.  */
